<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNameDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/tvSpecializationDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/specialization"
        android:textSize="20sp"
        android:layout_marginBottom="100dp"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/bSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_a_date"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/bSelectTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_a_time"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bConfirmRec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_the_recording"
            android:layout_gravity="bottom"/>

    </LinearLayout>

</LinearLayout>