<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNamePat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvBirthdayPat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvPolicyPat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/policy"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvPassportPat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passport_data"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvRegistrationPat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_of_registration"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etMedicalHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:layout_weight="7"
            android:hint="@string/medical_history"
            android:textSize="17sp"
            android:layout_marginBottom="70dp"
            android:layout_gravity="bottom"/>

        <Button
            android:id="@+id/bSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:layout_marginBottom="70dp"
            android:layout_gravity="bottom"/>

    </LinearLayout>
</LinearLayout>