<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPatientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvPatientBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvPatientPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/policy"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvPatientPassport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passport_data"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvPatientRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_of_registration"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvMedHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medical_history"
            android:textSize="15sp"
            android:layout_marginBottom="70dp"
            android:layout_gravity="bottom"/>

    </LinearLayout>
</LinearLayout>