<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNameDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/tvSpecializationDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specialization"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/tvLicenseDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/license_number"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_phone_number"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/bAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_an_appointment"
            android:layout_gravity="bottom"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

</LinearLayout>