<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/doctor_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back" />
    </LinearLayout>

    <EditText
        android:id="@+id/etNameDoc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="47dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/etSpecializationDoc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/specialization"
        android:inputType="text"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="111dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etLicenseDoc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/license_number"
        android:inputType="text"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="189dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etPhoneDoc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/contact_phone_number"
        android:inputType="text"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="253dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bRegisterDoc"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:text="@string/register"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>
</LinearLayout>