<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            app:srcCompat="@drawable/ic_back"
            android:minHeight="48dp"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/etSearchPat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="165"
            android:textColorHint="@android:color/darker_gray"
            android:queryHint="@string/search"
            android:textSize="16sp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/bSearchPat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/search"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

    <ListView
        android:id="@+id/searchHistoryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/clearHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clean_history"
        android:visibility="gone" />

    <TextView
        android:id="@+id/placeholder_no_results_doc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nothing_was_found"
        android:gravity="center"
        android:textSize="16sp"
        android:padding="24dp"
        android:visibility="gone"
        android:textColor="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/placeholder_error_doc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_upload_error"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_dark" />

        <Button
            android:id="@+id/button_retry_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/patList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>